--- a/index.html
+++ b/index.html
@@ -5,13 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script defer src="script/script.js"></script>
+    <link href="CSS/stylesheet.css" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
-    <button class ="click_me">Click Me!</button>
-
-    
-
+    <button class="click_me">Click Me!</button>
 
     </body>
     
